# rtracer

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: cornell_box.rs  main.rs  worker.rs
src/canvas/: canvas.rs  canvas_test.rs  canvas_writer.rs  color.rs  color_test.rs  mod.rs
src/image/: canvas.rs  canvas_test.rs  canvas_writer.rs  color.rs  color_test.rs
src/maths/: float_compare.rs  matrix2x2.rs  matrix3x3.rs  matrix4x4.rs  matrix_methods.rs  matrix_test.rs  mod.rs  point.rs  tuple.rs  tuple_test.rs  vector.rs
src/primitives/: camera.rs  camera_test.rs  intersection.rs  intersection_stats.rs  material.rs  material_test.rs  mod.rs  pattern.rs  pattern_test.rs  point_light.rs  ray.rs  ray_test.rs  shape.rs  shape_test.rs  world.rs  world_test.rs
