[package]
name = "rtracer"
version = "0.1.0"
authors = ["guydunton <guydunton@economist.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-catch = { git = "https://github.com/gdunton/rust-catch", rev = "HEAD" }
png = "0.16.1"
